# webview_with_streamlit

./: .gitignore  Better-Tools-Launcher.html  Better-Tools-Launcher.py  CHANGELOG.md  CLAUDE.md  README.md  auto_build.py  autopack.py  build.py  main.py  pyproject.toml  streamlit_app.py  updater.py  webview.spec
.claude/: settings.json
assets/: latest.json
assets/ps工具/: PS_OF_PY-V3.xlsm
src/app/: __init__.py  app_info.py  app_utils.py  hidden_import.py  init_app.py  start_app.py
src/fast_api/: fastapi_app.py
src/fast_api/api/v1/: main.py
src/fast_api/api/v1/pywebview/: window.py
src/manager/: plugin_manager.py  plugins_manager.py
src/modules/ps_of_py/ps/: __init__.py  images.py  load_data.py  ps_core.py  ps_layer_factory.py  ps_utils.py
src/modules/ps_of_py/ui/: main.py
src/test/: test.py  test_plugin_update.py
src/ui/: sidebar.py  streamlit_app.py  window.py
src/ui/pages/: __init__.py
src/ui/pages/Home/: changelog.py  home.py  readme.py  welcome.py
src/ui/pages/PSAutomation/: main.py
src/ui/pages/Setting/: window.py
src/ui/pages/Test/: test_a.py  test_b.py  test_excle.py  update_test.py  布局测试.py
src/ui/pages/Tiny_tools/: dingbot.py
src/ui/pages/pywebview/: window.py
src/ui/utils/: __init__.py
src/utils/: __init__.py  _config_io.py  config_manager.py  config_reader.py
test/: test_hello.py
