[project]
name = "Better-Tools"
version = "0.0.1"
description = "WebView with Streamlit Desktop Application"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "pywebview>=6.1",
    "streamlit>=1.52.0",
    "fastapi>=0.124.2",
    "uvicorn>=0.38.0",
    "loguru>=0.7.3",
    "requests>=2.32.5",
    "xlwings>=0.33.17",
    # "streamlit-cookies-controller>=0.0.4",
    "photoshop-python-api>=0.24.1",
    "pillow>=12.0.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
]
[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
